# messier-dashboard

./: .env.example  .gitignore  Containerfile  README.md  main.py  messier_catalog.json  podman-compose.yml  pyproject.toml  seed.py
.claude/: settings.local.json.tmp.37515.aa65505292bb
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  templating.py
app/routers/: __init__.py  admin.py  auth.py  leaderboard.py  observations.py
app/static/css/: style.css
app/templates/: admin.html  base.html  catalogue.html  dashboard.html  leaderboard.html  login.html  objet_detail.html
app/templates/partials/: _object_card.html  _progress_bar.html  _visibility_strip.html  leaderboard_row.html  object_progress.html  observation_row.html
scripts/: compute_visibility.py
tests/: conftest.py  test_admin.py  test_auth.py  test_dashboard.py  test_leaderboard.py  test_observations.py  test_seed.py
