[project]
name = "messier-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.1",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
